==> davideferrario/TommRo/libs/02_tommRoCHw/template/bus/env/arm/SiLabs/tommRoCHwTemplateBusEnvironmentUART.c <==
#include "bus/env/tommRoCHwTemplateBusEnvironmentUART.h"
#include "TOMMROC.h"
#include "env/tommRoCTemplateEnv.h"
#include "bus/common/uart/tommRoCHwTemplateBusCommonUARTFIFO.h"
#include "bus/common/uart/tommRoCHwTemplateBusCommonUARTFIFOCb.h"
#include "bus/env/arm/SiLabs/uart/tommRoCHwTemplateBusUARTSiLabsHal.h"
#include "bus/env/arm/SiLabs/uart/tommRoCHwTemplateBusUARTSiLabsLocation.h"
#include "em_usart.h"
#include "em_leuart.h"
#include <stdbool.h>
#define __DEFAULT_BAUDRATE__        (115200)
#define __EMPTY___tommRoC_hw_uart_config_t____                                          \
{                                                                                       \
    /* .buffer */           __EMPTY_tommRoC_hw_template_bus_uart_buffer_t__,            \
    /* .baudRate */         __DEFAULT_BAUDRATE__,                                       \
    /* .siLabsLocation */   __EMPTY_tommRoC_hw_template_bus_uart_silabs_location_t__,   \
}

static tommRoC_hw_err_enum_t _usart_write_buffer(
                __tommRoC_hw_uart_handle_t__*   const   uartHandlePtr,
        const   uint8_t*                        const   writeBufferPtr,
        const   uint16_t                                writeBufferLen) {

    tommRoC_fifo_ISR_t* txFifoPtr = &uartHandlePtr->txUARTFifo.fifo;
    uint8_t txByte;

    // NOTE: ASSERT_SUCCESS is used because higher level function (tommRoCHwTemplateBusCommonUARTFIFOCbWriteBuffers) check for free space available
    TOMMROC_ASSERT_TOMMROC_LIB_FUNCT_SUCCESS(tommRoCFIFOISRMultiPush(txFifoPtr, writeBufferPtr, writeBufferLen));

    // If uart TX already in progress
    if (tommRoCHwTemplateBusUARTSiLabsHalTxIRQIsEnabled(uartHandlePtr->usartPtr)) {
        // Next transmission managed by interrupt
        return TOMMRO_C_HW_ERR_SUCCESS;
    }

    // If pop fails, it means that already tx in interrupt (maybe a thread switch context).
    if (TOMMRO_C_ERR_SUCCESS != tommRoCFIFOISRPop(txFifoPtr, &txByte)) {
        return TOMMRO_C_HW_ERR_SUCCESS;
    }

    uartHandlePtr->isTxInProgress = true;

    // Start interrupt transmission
    USART_Tx((USART_TypeDef*) uartHandlePtr->usartPtr, txByte);

    tommRoCHwTemplateBusUARTSiLabsHalTxIRQEnable(uartHandlePtr->usartPtr);

    return TOMMRO_C_HW_ERR_SUCCESS;
}

static tommRoC_hw_err_enum_t _usart_irq_write_buffer(
                __tommRoC_hw_uart_handle_t__*   const   uartHandlePtr,
        const   uint8_t*                        const   writeBufferPtr,
        const   uint16_t                                writeBufferLen) {

    tommRoC_hw_err_enum_t res;

    NVIC_DisableIRQ(uartHandlePtr->txIRQn);

    res = _usart_write_buffer(uartHandlePtr, writeBufferPtr, writeBufferLen);

    NVIC_EnableIRQ(uartHandlePtr->txIRQn);

    return res;
}

static tommRoC_hw_err_enum_t _set_buffer(
        const   tommRoC_hw_template_bus_uart_enum_t             bus,
        const   tommRoC_hw_template_bus_uart_buffer_t*  const   propValuePtr) {

    switch (bus) {

#if defined (__TOMMROC_HW_USE_UART_0_TEMPLATE__)
    case TOMMROC_HW_TEMPLATE_BUS_UART_0:
        return _set_buffer_specific(propValuePtr, &_uart_config_0.buffer);
#endif

#if defined (__TOMMROC_HW_USE_UART_1_TEMPLATE__)
    case TOMMROC_HW_TEMPLATE_BUS_UART_1:
        return _set_buffer_specific(propValuePtr, &_uart_config_1.buffer);
#endif

#if defined (__TOMMROC_HW_USE_UART_2_TEMPLATE__)
    case TOMMROC_HW_TEMPLATE_BUS_UART_2:
        return _set_buffer_specific(propValuePtr, &_uart_config_2.buffer);
#endif

#if defined (__TOMMROC_HW_USE_LEUART_0_TEMPLATE__)
    case TOMMROC_HW_TEMPLATE_BUS_LEUART_0:
        return _set_buffer_specific(propValuePtr, &_leuart_config_0.buffer);
#endif

#if defined (__TOMMROC_HW_USE_LEUART_1_TEMPLATE__)
    case TOMMROC_HW_TEMPLATE_BUS_LEUART_1:
        return _set_buffer_specific(propValuePtr, &_leuart_config_1.buffer);
#endif

    default:
        break;

    }

    return TOMMRO_C_HW_NOT_AVAILABLE_ERR;
}

tommRoC_hw_err_enum_t tommRoCHwTemplateBusEnvironmentUART1Start(
                tommRoC_hw_bus_cb_funct_t*  const   cbFunctPtr) {

#if defined (__TOMMROC_HW_USE_SPECIFIC_INTERRUPT_UART_1_TEMPLATE_TX_BUFFER_SIZE_BYTE__)
    static uint8_t txBuffer[__TOMMROC_HW_USE_SPECIFIC_INTERRUPT_UART_1_TEMPLATE_TX_BUFFER_SIZE_BYTE__];
    _uart_handle_1.txBufferPtr  = txBuffer;
    _uart_handle_1.txBufferSize = __TOMMROC_HW_USE_SPECIFIC_INTERRUPT_UART_1_TEMPLATE_TX_BUFFER_SIZE_BYTE__;
#endif

    tommRoC_hw_template_bus_uart_silabs_hal_config_t halConfig;

    halConfig.clock     = cmuClock_USART1;
    halConfig.usartPtr  = (void*) USART1;
    halConfig.baudRate  = _uart_config_1.baudRate;
    halConfig.rxIRQn    = USART1_RX_IRQn;
    halConfig.txIRQn    = USART1_TX_IRQn;
    TOMMROC_ASSERT_TOMMROC_LIB_FUNCT_SUCCESS(tommRoCUtilMemCopy(&halConfig.location, &_uart_config_1.siLabsLocation, sizeof(tommRoC_hw_template_bus_uart_silabs_location_t)));

    TOMMROC_HW_ERR_IF_TOMMROC_HW_LIB_FUNCT_NOT_SUCCESS_RETURN_RESULT(tommRoCHwTemplateBusUARTSiLabsHalInit(&halConfig));

    TOMMROC_HW_ERR_IF_TOMMROC_HW_LIB_FUNCT_NOT_SUCCESS_RETURN_RESULT(
            tommRoCHwTemplateBusCommonUARTFIFOInit(
                    &_uart_config_1.buffer,
                    &_uart_handle_1.txUARTFifo,
                    &_uart_handle_1.rxUARTFifo));

    _EUSART1_get_callback_ARM(cbFunctPtr);

    tommRoCHwTemplateBusUARTSiLabsHalRxIRQEnable((USART_TypeDef*) halConfig.usartPtr);

    _uart_handle_1.usartPtr = halConfig.usartPtr;
    _uart_handle_1.txIRQn   = halConfig.txIRQn;

    return TOMMRO_C_HW_ERR_SUCCESS;
}

tommRoC_hw_err_enum_t tommRoCHwTemplateBusEnvironmentUART2Start(
                tommRoC_hw_bus_cb_funct_t*  const   cbFunctPtr) {

#if defined (__TOMMROC_HW_USE_SPECIFIC_INTERRUPT_UART_2_TEMPLATE_TX_BUFFER_SIZE_BYTE__)
    static uint8_t txBuffer[__TOMMROC_HW_USE_SPECIFIC_INTERRUPT_UART_2_TEMPLATE_TX_BUFFER_SIZE_BYTE__];
    _uart_handle_2.txBufferPtr  = txBuffer;
    _uart_handle_2.txBufferSize = __TOMMROC_HW_USE_SPECIFIC_INTERRUPT_UART_2_TEMPLATE_TX_BUFFER_SIZE_BYTE__;
#endif

    tommRoC_hw_template_bus_uart_silabs_hal_config_t halConfig;

    halConfig.clock     = cmuClock_USART2;
    halConfig.usartPtr  = (void*) USART2;
    halConfig.baudRate  = _uart_config_2.baudRate;
    halConfig.rxIRQn    = USART2_RX_IRQn;
    halConfig.txIRQn    = USART2_TX_IRQn;
    TOMMROC_ASSERT_TOMMROC_LIB_FUNCT_SUCCESS(tommRoCUtilMemCopy(&halConfig.location, &_uart_config_2.siLabsLocation, sizeof(tommRoC_hw_template_bus_uart_silabs_location_t)));

    TOMMROC_HW_ERR_IF_TOMMROC_HW_LIB_FUNCT_NOT_SUCCESS_RETURN_RESULT(tommRoCHwTemplateBusUARTSiLabsHalInit(&halConfig));

    TOMMROC_HW_ERR_IF_TOMMROC_HW_LIB_FUNCT_NOT_SUCCESS_RETURN_RESULT(
            tommRoCHwTemplateBusCommonUARTFIFOInit(
                    &_uart_config_2.buffer,
                    &_uart_handle_2.txUARTFifo,
                    &_uart_handle_2.rxUARTFifo));

    _EUSART2_get_callback_ARM(cbFunctPtr);

    tommRoCHwTemplateBusUARTSiLabsHalRxIRQEnable((USART_TypeDef*) halConfig.usartPtr);

    _uart_handle_2.usartPtr = halConfig.usartPtr;
    _uart_handle_2.txIRQn   = halConfig.txIRQn;

    return TOMMRO_C_HW_ERR_SUCCESS;
}

tommRoC_hw_err_enum_t tommRoCHwTemplateBusEnvironmentLEUART1Start(
                tommRoC_hw_bus_cb_funct_t*  const   cbFunctPtr) {

#if defined (__TOMMROC_HW_USE_SPECIFIC_INTERRUPT_LEUART_1_TEMPLATE_TX_BUFFER_SIZE_BYTE__)
    static uint8_t txBuffer[__TOMMROC_HW_USE_SPECIFIC_INTERRUPT_LEUART_1_TEMPLATE_TX_BUFFER_SIZE_BYTE__];
    _leuart_handle_1.txBufferPtr    = txBuffer;
    _leuart_handle_1.txBufferSize   = __TOMMROC_HW_USE_SPECIFIC_INTERRUPT_LEUART_1_TEMPLATE_TX_BUFFER_SIZE_BYTE__;
#endif

    tommRoC_hw_template_bus_uart_silabs_hal_config_t halConfig;

    halConfig.clock     = cmuClock_LEUART1;
    halConfig.usartPtr  = (void*) LEUART1;
    halConfig.baudRate  = _leuart_config_1.baudRate;
    halConfig.rxIRQn    = LEUART1_IRQn;
    halConfig.txIRQn    = LEUART1_IRQn;
    TOMMROC_ASSERT_TOMMROC_LIB_FUNCT_SUCCESS(tommRoCUtilMemCopy(&halConfig.location, &_leuart_config_1.siLabsLocation, sizeof(tommRoC_hw_template_bus_uart_silabs_location_t)));

    TOMMROC_HW_ERR_IF_TOMMROC_HW_LIB_FUNCT_NOT_SUCCESS_RETURN_RESULT(tommRoCHwTemplateBusUARTSiLabsHalLEInit(&halConfig));

    TOMMROC_HW_ERR_IF_TOMMROC_HW_LIB_FUNCT_NOT_SUCCESS_RETURN_RESULT(
            tommRoCHwTemplateBusCommonUARTFIFOInit(
                    &_leuart_config_1.buffer,
                    &_leuart_handle_1.txUARTFifo,
                    &_leuart_handle_1.rxUARTFifo));

    _LEUART1_get_callback_ARM(cbFunctPtr);

    tommRoCHwTemplateBusUARTSiLabsHalLERxIRQEnable((LEUART_TypeDef*) halConfig.usartPtr);

    _leuart_handle_1.usartPtr   = halConfig.usartPtr;
    _leuart_handle_1.txIRQn     = halConfig.txIRQn;

    return TOMMRO_C_HW_ERR_SUCCESS;
}
