==> davideferrario/TommRo/libs/02_tommRoCHw/template/bus/env/arm/STM32/tommRoCHwTemplateBusEnvironmentUART.c <==
#include "bus/env/tommRoCHwTemplateBusEnvironmentUART.h"
#include "env/tommRoCTemplateEnv.h"
#include "TOMMROC.h"
#include "bus/common/uart/tommRoCHwTemplateBusCommonUARTFIFO.h"
#include "bus/common/uart/tommRoCHwTemplateBusCommonUARTFIFOCb.h"
#include "bus/env/arm/STM32/uart/tommRoCHwTemplateBusUARTSTM32DEF.h"
#include "bus/env/arm/STM32/uart/tommRoCHwTemplateBusUARTSTM32Hal.h"
#include "usart.h"
#include <stdbool.h>
#define __EMPTY___tommRoC_hw_uart_config_t____                          \
{                                                                       \
    /* .buffer */   __EMPTY_tommRoC_hw_template_bus_uart_buffer_t__,    \
}

static tommRoC_hw_err_enum_t _usart_write_buffer(
                __tommRoC_hw_uart_handle_t__*   const   uartHandlePtr,
        const   uint8_t*                        const   writeBufferPtr,
        const   uint16_t                                writeBufferLen) {

    tommRoC_fifo_ISR_t* txFifoPtr           = &uartHandlePtr->txUARTFifo.fifo;
    UART_HandleTypeDef* uartHandleTypePtr   = (UART_HandleTypeDef*) uartHandlePtr->usartPtr;

    HAL_UART_StateTypeDef uartState;

#if defined (__TOMMROC_HW_USE_UART_TEMPLATE_NOT_STANDARD_WORD_LENGTH_ENABLED__)
    uint8_t wordLength = _get_usart_word_length(uartHandleTypePtr);
#else
    static const uint8_t wordLength = TOMMROC_UTIL_U8_SIZE;
#endif

#if defined (__TOMMROC_HW_USE_SPECIFIC_INTERRUPT_AT_LEAST_ONE_UART_TEMPLATE_TX_BUFFER_IS_USED__)
    uint32_t inAmount;
    uint32_t toTxSize;
#endif

    // NOTE: ASSERT_SUCCESS is used because higher level function (tommRoCHwTemplateBusCommonUARTFIFOCbWriteBuffers) check for free space available
    TOMMROC_ASSERT_TOMMROC_LIB_FUNCT_SUCCESS(tommRoCFIFOISRMultiPush(txFifoPtr, writeBufferPtr, writeBufferLen));

    uartState = HAL_UART_GetState(uartHandleTypePtr);

    // If uart TX already in progress
    if ((HAL_UART_STATE_BUSY_TX == uartState) || (HAL_UART_STATE_BUSY_TX_RX == uartState)) {
        // Next transmission managed by interrupt
        return TOMMRO_C_HW_ERR_SUCCESS;
    }

#if !defined (__TOMMROC_HW_USE_SPECIFIC_INTERRUPT_AT_LEAST_ONE_UART_TEMPLATE_TX_BUFFER_IS_USED__)
#if defined (__TOMMROC_HW_USE_UART_TEMPLATE_NOT_STANDARD_WORD_LENGTH_ENABLED__)
    // If pop fails, it means that already tx in interrupt (maybe a thread switch context).
    if (TOMMRO_C_ERR_SUCCESS != tommRoCFIFOISRMultiPop(txFifoPtr, uartHandlePtr->txByte, wordLength)) {
        return TOMMRO_C_HW_ERR_SUCCESS;
    }
#else
    TOMMROC_UTIL_UNUSED_PARAM(wordLength);
    // If pop fails, it means that already tx in interrupt (maybe a thread switch context).
    if (TOMMRO_C_ERR_SUCCESS != tommRoCFIFOISRPop(txFifoPtr, uartHandlePtr->txByte)) {
        return TOMMRO_C_HW_ERR_SUCCESS;
    }
#endif

    uartHandlePtr->isTxInProgress = true;

    // Start interrupt transmission
    if (HAL_OK != HAL_UART_Transmit_IT(uartHandleTypePtr, uartHandlePtr->txByte, 1)) {
        uartHandlePtr->isTxInProgress = false;
        return TOMMRO_C_HW_BUS_OPERATION_FAIL_ERR;
    }

    return TOMMRO_C_HW_ERR_SUCCESS;
#else
    if ((TOMMROC_UTIL_U8_SIZE != wordLength) || (NULL == uartHandlePtr->txBufferPtr) || (0 == uartHandlePtr->txBufferSize)) {

        // If pop fails, it means that already tx in interrupt (maybe a thread switch context).
        if (TOMMRO_C_ERR_SUCCESS != tommRoCFIFOISRMultiPop(txFifoPtr, uartHandlePtr->txByte, wordLength)) {
            return TOMMRO_C_HW_ERR_SUCCESS;
        }

        uartHandlePtr->isTxInProgress = true;

        // Start interrupt transmission
        if (HAL_OK != HAL_UART_Transmit_IT(uartHandleTypePtr, uartHandlePtr->txByte, 1)) {
            uartHandlePtr->isTxInProgress = false;
            return TOMMRO_C_HW_BUS_OPERATION_FAIL_ERR;
        }

        return TOMMRO_C_HW_ERR_SUCCESS;
    }
    else {

        if (TOMMRO_C_ERR_SUCCESS != tommRoCFIFOISRInsideObjAmount(txFifoPtr, &inAmount)) {
            return TOMMRO_C_HW_BUS_OPERATION_FAIL_ERR;
        }

        toTxSize = tommRoCMathMin(inAmount, uartHandlePtr->txBufferSize);

        // If pop fails, it means that already tx in interrupt (maybe a thread switch context).
        if (TOMMRO_C_ERR_SUCCESS != tommRoCFIFOISRMultiPop(txFifoPtr, uartHandlePtr->txBufferPtr, toTxSize)) {
            return TOMMRO_C_HW_ERR_SUCCESS;
        }

        uartHandlePtr->isTxInProgress = true;

        // Start interrupt transmission
        if (HAL_OK != HAL_UART_Transmit_IT(uartHandleTypePtr, uartHandlePtr->txBufferPtr, toTxSize)) {
            uartHandlePtr->isTxInProgress = false;
            return TOMMRO_C_HW_BUS_OPERATION_FAIL_ERR;
        }

        return TOMMRO_C_HW_ERR_SUCCESS;
    }
#endif
}

static tommRoC_hw_err_enum_t _usart_irq_write_buffer(
                __tommRoC_hw_uart_handle_t__*   const   uartHandlePtr,
        const   uint8_t*                        const   writeBufferPtr,
        const   uint16_t                                writeBufferLen) {

    tommRoC_hw_err_enum_t res;

    HAL_NVIC_DisableIRQ(uartHandlePtr->usartIRQn);

    res = _usart_write_buffer(uartHandlePtr, writeBufferPtr, writeBufferLen);

    HAL_NVIC_EnableIRQ(uartHandlePtr->usartIRQn);

    return res;
}

static tommRoC_hw_err_enum_t _set_buffer(
        const   tommRoC_hw_template_bus_uart_enum_t             bus,
        const   tommRoC_hw_template_bus_uart_buffer_t*  const   propValuePtr) {

    switch (bus) {

#if defined (__TOMMROC_HW_USE_UART_1_TEMPLATE__)
    case TOMMROC_HW_TEMPLATE_BUS_UART_1:
        return _set_buffer_specific(propValuePtr, &_uart_config_1.buffer);
#endif

#if defined (__TOMMROC_HW_USE_UART_2_TEMPLATE__)
    case TOMMROC_HW_TEMPLATE_BUS_UART_2:
        return _set_buffer_specific(propValuePtr, &_uart_config_2.buffer);
#endif

#if defined (__TOMMROC_HW_USE_UART_3_TEMPLATE__)
    case TOMMROC_HW_TEMPLATE_BUS_UART_3:
        return _set_buffer_specific(propValuePtr, &_uart_config_3.buffer);
#endif

#if defined (__TOMMROC_HW_USE_UART_4_TEMPLATE__)
    case TOMMROC_HW_TEMPLATE_BUS_UART_4:
        return _set_buffer_specific(propValuePtr, &_uart_config_4.buffer);
#endif

#if defined (__TOMMROC_HW_USE_UART_5_TEMPLATE__)
    case TOMMROC_HW_TEMPLATE_BUS_UART_5:
        return _set_buffer_specific(propValuePtr, &_uart_config_5.buffer);
#endif

#if defined (__TOMMROC_HW_USE_UART_6_TEMPLATE__)
    case TOMMROC_HW_TEMPLATE_BUS_UART_6:
        return _set_buffer_specific(propValuePtr, &_uart_config_6.buffer);
#endif

#if defined (__TOMMROC_HW_USE_UART_7_TEMPLATE__)
    case TOMMROC_HW_TEMPLATE_BUS_UART_7:
        return _set_buffer_specific(propValuePtr, &_uart_config_7.buffer);
#endif

#if defined (__TOMMROC_HW_USE_UART_8_TEMPLATE__)
    case TOMMROC_HW_TEMPLATE_BUS_UART_8:
        return _set_buffer_specific(propValuePtr, &_uart_config_8.buffer);
#endif

#if defined (__TOMMROC_HW_USE_LEUART_1_TEMPLATE__)
    case TOMMROC_HW_TEMPLATE_BUS_LEUART_1:
        return _set_buffer_specific(propValuePtr, &_leuart_config_1.buffer);
#endif

    default:
        break;

    }

    return TOMMRO_C_HW_NOT_AVAILABLE_ERR;
}

tommRoC_hw_err_enum_t tommRoCHwTemplateBusEnvironmentUART1Start(
                tommRoC_hw_bus_cb_funct_t*  const   cbFunctPtr) {

#if defined (__TOMMROC_HW_USE_SPECIFIC_INTERRUPT_UART_1_TEMPLATE_TX_BUFFER_SIZE_BYTE__)
    static uint8_t txBuffer[__TOMMROC_HW_USE_SPECIFIC_INTERRUPT_UART_1_TEMPLATE_TX_BUFFER_SIZE_BYTE__];
    _uart_handle_1.txBufferPtr  = txBuffer;
    _uart_handle_1.txBufferSize = __TOMMROC_HW_USE_SPECIFIC_INTERRUPT_UART_1_TEMPLATE_TX_BUFFER_SIZE_BYTE__;
#endif

#if defined (TOMMROC_HW_TEMPLATE_BUS_UART_STM32_DEF_UART1_TX_GPIO_PORT) && defined (TOMMROC_HW_TEMPLATE_BUS_UART_STM32_DEF_UART1_RX_GPIO_PORT)
    __TOMMROC_HW_TEMPLATE_BUS_UART_START_TX_RX_ARM__(EUSART1, huart1, _uart_handle_1, cbFunctPtr, _uart_config_1, TOMMROC_HW_TEMPLATE_BUS_UART_STM32_DEF_UART1_IRQn);
#elif defined (TOMMROC_HW_TEMPLATE_BUS_UART_STM32_DEF_UART1_TX_GPIO_PORT)
    __TOMMROC_HW_TEMPLATE_BUS_UART_START_ONLY_TX_ARM__(EUSART1, huart1, _uart_handle_1, cbFunctPtr, _uart_config_1, TOMMROC_HW_TEMPLATE_BUS_UART_STM32_DEF_UART1_IRQn);
#elif defined (TOMMROC_HW_TEMPLATE_BUS_UART_STM32_DEF_UART1_RX_GPIO_PORT)
    __TOMMROC_HW_TEMPLATE_BUS_UART_START_ONLY_RX_ARM__(EUSART1, huart1, _uart_handle_1, cbFunctPtr, _uart_config_1, TOMMROC_HW_TEMPLATE_BUS_UART_STM32_DEF_UART1_IRQn);
#endif
}

tommRoC_hw_err_enum_t tommRoCHwTemplateBusEnvironmentUART2Start(
                tommRoC_hw_bus_cb_funct_t*  const   cbFunctPtr) {

#if defined (__TOMMROC_HW_USE_SPECIFIC_INTERRUPT_UART_2_TEMPLATE_TX_BUFFER_SIZE_BYTE__)
    static uint8_t txBuffer[__TOMMROC_HW_USE_SPECIFIC_INTERRUPT_UART_2_TEMPLATE_TX_BUFFER_SIZE_BYTE__];
    _uart_handle_2.txBufferPtr  = txBuffer;
    _uart_handle_2.txBufferSize = __TOMMROC_HW_USE_SPECIFIC_INTERRUPT_UART_2_TEMPLATE_TX_BUFFER_SIZE_BYTE__;
#endif

#if defined (TOMMROC_HW_TEMPLATE_BUS_UART_STM32_DEF_UART2_TX_GPIO_PORT) && defined (TOMMROC_HW_TEMPLATE_BUS_UART_STM32_DEF_UART2_RX_GPIO_PORT)
    __TOMMROC_HW_TEMPLATE_BUS_UART_START_TX_RX_ARM__(EUSART2, huart2, _uart_handle_2, cbFunctPtr, _uart_config_2, TOMMROC_HW_TEMPLATE_BUS_UART_STM32_DEF_UART2_IRQn);
#elif defined (TOMMROC_HW_TEMPLATE_BUS_UART_STM32_DEF_UART2_TX_GPIO_PORT)
    __TOMMROC_HW_TEMPLATE_BUS_UART_START_ONLY_TX_ARM__(EUSART2, huart2, _uart_handle_2, cbFunctPtr, _uart_config_2, TOMMROC_HW_TEMPLATE_BUS_UART_STM32_DEF_UART2_IRQn);
#elif defined (TOMMROC_HW_TEMPLATE_BUS_UART_STM32_DEF_UART2_RX_GPIO_PORT)
    __TOMMROC_HW_TEMPLATE_BUS_UART_START_ONLY_RX_ARM__(EUSART2, huart2, _uart_handle_2, cbFunctPtr, _uart_config_2, TOMMROC_HW_TEMPLATE_BUS_UART_STM32_DEF_UART2_IRQn);
#endif
}

tommRoC_hw_err_enum_t tommRoCHwTemplateBusEnvironmentLEUART1Start(
                tommRoC_hw_bus_cb_funct_t*  const   cbFunctPtr) {

#if defined (__TOMMROC_HW_USE_SPECIFIC_INTERRUPT_LEUART_1_TEMPLATE_TX_BUFFER_SIZE_BYTE__)
    static uint8_t txBuffer[__TOMMROC_HW_USE_SPECIFIC_INTERRUPT_LEUART_1_TEMPLATE_TX_BUFFER_SIZE_BYTE__];
    _leuart_handle_1.txBufferPtr    = txBuffer;
    _leuart_handle_1.txBufferSize   = __TOMMROC_HW_USE_SPECIFIC_INTERRUPT_LEUART_1_TEMPLATE_TX_BUFFER_SIZE_BYTE__;
#endif

#if defined (TOMMROC_HW_TEMPLATE_BUS_UART_STM32_DEF_LPUART1_TX_GPIO_PORT) && defined (TOMMROC_HW_TEMPLATE_BUS_UART_STM32_DEF_LPUART1_RX_GPIO_PORT)
    __TOMMROC_HW_TEMPLATE_BUS_UART_START_TX_RX_ARM__(LEUART1, hlpuart1, _leuart_handle_1, cbFunctPtr, _leuart_config_1, TOMMROC_HW_TEMPLATE_BUS_UART_STM32_DEF_LPUART1_IRQn);
#elif defined (TOMMROC_HW_TEMPLATE_BUS_UART_STM32_DEF_LPUART1_TX_GPIO_PORT)
    __TOMMROC_HW_TEMPLATE_BUS_UART_START_ONLY_TX_ARM__(LEUART1, hlpuart1, _leuart_handle_1, cbFunctPtr, _leuart_config_1, TOMMROC_HW_TEMPLATE_BUS_UART_STM32_DEF_LPUART1_IRQn);
#elif defined (TOMMROC_HW_TEMPLATE_BUS_UART_STM32_DEF_LPUART1_RX_GPIO_PORT)
    __TOMMROC_HW_TEMPLATE_BUS_UART_START_ONLY_RX_ARM__(LEUART1, hlpuart1, _leuart_handle_1, cbFunctPtr, _leuart_config_1, TOMMROC_HW_TEMPLATE_BUS_UART_STM32_DEF_LPUART1_IRQn);
#endif
}
